test/testdata/classes/inheritance/super_missing_property_error.lox
class Superclass {}

class Subclass < Superclass {
  method() {
    // error: 'Superclass' class has no method 'method'
    // lint warning: 'Superclass' class has no method 'method'
    super.method();
  }
}

var subclass = Subclass();
subclass.method();
